--- a/map.css
+++ b/map.css
@@ -1,3 +1,25 @@
+h1 {
+    font-family: "Lucida Console", "Courier New", monospace;
+    font-size: 40px;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    text-shadow: 2px 2px 2px #000000;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+p {
+    font-family: "Lucida Console", "Courier New", monospace;
+  }
+
 #map { 
     height: 800px; 
     width: 75%;
