--- a/map.css
+++ b/map.css
@@ -25,6 +25,26 @@ h3 {
     text-shadow: 1px 1px 1px #000000;
 }
 
+
+h4 {
+  font-family: "Lucida Console", "Courier New", monospace;
+  font-size: 20px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  text-shadow: 0.5px 0.5px 0.5px #000000;
+}
+
+h5 {
+  font-family: "Lucida Console", "Courier New", monospace;
+  font-size: 15px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  text-shadow: 0.5px 0.5px 0.5px #000000;
+}
+
+
 p {
     font-family: "Lucida Console", "Courier New", monospace;
   }
