--- a/map.css
+++ b/map.css
@@ -25,7 +25,6 @@ h3 {
     text-shadow: 1px 1px 1px #000000;
 }
 
-
 h4 {
   font-family: "Lucida Console", "Courier New", monospace;
   font-size: 20px;
@@ -44,9 +43,26 @@ h5 {
   text-shadow: 0.5px 0.5px 0.5px #000000;
 }
 
-
 p {
     font-family: "Lucida Console", "Courier New", monospace;
+  }
+
+  .button {
+    background-color: #788680; /* Green */
+    border: none;
+    color:black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-family: "Lucida Console", "Courier New", monospace;
+    font-size: 16px;
+    transition-duration: 0.4s;
+  }
+
+  .button:hover {
+    background-color: #aa5d04; /* Green */
+    color: white;
   }
 
 .flex-container {
